testsuite/tests/partial-sigs/should_fail/all.T
test('Forall1', normal, compile_fail, [''])
test('NamedWildcardsEnabled', normal, compile_fail, [''])
